src/main/java/ru/gaidamaka/jvm/lang/antlr4/boklParser.java
package ru.gaidamaka.jvm.lang.antlr4;// Generated from bokl.g4 by ANTLR 4.3

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class boklParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__8=1, T__7=2, T__6=3, T__5=4, T__4=5, T__3=6, T__2=7, T__1=8, T__0=9, 
		Less=10, LessEqual=11, Greater=12, GreaterEqual=13, NotEqual=14, Equal=15, 
		LE=16, WS=17, NL=18, GT=19, Goto=20, Int=21, String=22, Print=23, Var=24, 
		Num=25, StringValue=26;
	public static final String[] tokenNames = {
		"<INVALID>", "'mainFunc'", "'('", "')'", "'{'", "'while'", "'++'", "'}'", 
		"'='", "'if'", "'<'", "'<='", "'>'", "'>='", "'!='", "'=='", "';'", "WS", 
		"'\n'", "'$'", "'goto'", "'int'", "'string'", "'print'", "Var", "Num", 
		"StringValue"
	};
	public static final int
		RULE_type = 0, RULE_varDeclaration = 1, RULE_intRValue = 2, RULE_intVarDeclaration = 3, 
		RULE_intVarAssign = 4, RULE_compareInt = 5, RULE_strRValue = 6, RULE_strVarDeclaration = 7, 
		RULE_strVarAssign = 8, RULE_compareStr = 9, RULE_condition = 10, RULE_ifStatement = 11, 
		RULE_print = 12, RULE_gotoOperation = 13, RULE_increment = 14, RULE_whileLoop = 15, 
		RULE_gotoLabel = 16, RULE_codeBlock = 17, RULE_script = 18, RULE_compareOperation = 19;
	public static final String[] ruleNames = {
		"type", "varDeclaration", "intRValue", "intVarDeclaration", "intVarAssign", 
		"compareInt", "strRValue", "strVarDeclaration", "strVarAssign", "compareStr", 
		"condition", "ifStatement", "print", "gotoOperation", "increment", "whileLoop", 
		"gotoLabel", "codeBlock", "script", "compareOperation"
	};

	@Override
	public String getGrammarFileName() { return "bokl.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public boklParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode String() { return getToken(boklParser.String, 0); }
		public TerminalNode Int() { return getToken(boklParser.Int, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_la = _input.LA(1);
			if ( !(_la==Int || _la==String) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public TerminalNode LE() { return getToken(boklParser.LE, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Var() { return getToken(boklParser.Var, 0); }
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitVarDeclaration(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); type();
			setState(43); match(WS);
			setState(44); match(Var);
			setState(45); match(LE);
			setState(47);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(46); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntRValueContext extends ParserRuleContext {
		public TerminalNode Num() { return getToken(boklParser.Num, 0); }
		public TerminalNode Var() { return getToken(boklParser.Var, 0); }
		public IntRValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intRValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterIntRValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitIntRValue(this);
		}
	}

	public final IntRValueContext intRValue() throws RecognitionException {
		IntRValueContext _localctx = new IntRValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_intRValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_la = _input.LA(1);
			if ( !(_la==Var || _la==Num) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntVarDeclarationContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public TerminalNode LE() { return getToken(boklParser.LE, 0); }
		public IntRValueContext intRValue() {
			return getRuleContext(IntRValueContext.class,0);
		}
		public TerminalNode Int() { return getToken(boklParser.Int, 0); }
		public TerminalNode Var() { return getToken(boklParser.Var, 0); }
		public IntVarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intVarDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterIntVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitIntVarDeclaration(this);
		}
	}

	public final IntVarDeclarationContext intVarDeclaration() throws RecognitionException {
		IntVarDeclarationContext _localctx = new IntVarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_intVarDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); match(Int);
			setState(52); match(WS);
			setState(53); match(Var);
			setState(55);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(54); match(WS);
				}
			}

			setState(57); match(T__1);
			setState(59);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(58); match(WS);
				}
			}

			setState(61); intRValue();
			setState(63);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(62); match(WS);
				}
			}

			setState(65); match(LE);
			setState(67);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(66); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntVarAssignContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public TerminalNode LE() { return getToken(boklParser.LE, 0); }
		public IntRValueContext intRValue() {
			return getRuleContext(IntRValueContext.class,0);
		}
		public TerminalNode Var() { return getToken(boklParser.Var, 0); }
		public IntVarAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intVarAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterIntVarAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitIntVarAssign(this);
		}
	}

	public final IntVarAssignContext intVarAssign() throws RecognitionException {
		IntVarAssignContext _localctx = new IntVarAssignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_intVarAssign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(Var);
			setState(71);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(70); match(WS);
				}
			}

			setState(73); match(T__1);
			setState(75);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(74); match(WS);
				}
			}

			setState(77); intRValue();
			setState(79);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(78); match(WS);
				}
			}

			setState(81); match(LE);
			setState(83);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(82); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompareIntContext extends ParserRuleContext {
		public IntRValueContext intRValue(int i) {
			return getRuleContext(IntRValueContext.class,i);
		}
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public List<IntRValueContext> intRValue() {
			return getRuleContexts(IntRValueContext.class);
		}
		public CompareOperationContext compareOperation() {
			return getRuleContext(CompareOperationContext.class,0);
		}
		public CompareIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterCompareInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitCompareInt(this);
		}
	}

	public final CompareIntContext compareInt() throws RecognitionException {
		CompareIntContext _localctx = new CompareIntContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_compareInt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); intRValue();
			setState(87);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(86); match(WS);
				}
			}

			setState(89); compareOperation();
			setState(91);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(90); match(WS);
				}
			}

			setState(93); intRValue();
			setState(95);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(94); match(WS);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrRValueContext extends ParserRuleContext {
		public TerminalNode StringValue() { return getToken(boklParser.StringValue, 0); }
		public TerminalNode Var() { return getToken(boklParser.Var, 0); }
		public StrRValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strRValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterStrRValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitStrRValue(this);
		}
	}

	public final StrRValueContext strRValue() throws RecognitionException {
		StrRValueContext _localctx = new StrRValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_strRValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_la = _input.LA(1);
			if ( !(_la==Var || _la==StringValue) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrVarDeclarationContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public TerminalNode String() { return getToken(boklParser.String, 0); }
		public TerminalNode LE() { return getToken(boklParser.LE, 0); }
		public StrRValueContext strRValue() {
			return getRuleContext(StrRValueContext.class,0);
		}
		public TerminalNode Var() { return getToken(boklParser.Var, 0); }
		public StrVarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strVarDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterStrVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitStrVarDeclaration(this);
		}
	}

	public final StrVarDeclarationContext strVarDeclaration() throws RecognitionException {
		StrVarDeclarationContext _localctx = new StrVarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_strVarDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); match(String);
			setState(100); match(WS);
			setState(101); match(Var);
			setState(102); match(WS);
			setState(103); match(T__1);
			setState(104); match(WS);
			setState(105); strRValue();
			setState(107);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(106); match(WS);
				}
			}

			setState(109); match(LE);
			setState(111);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(110); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrVarAssignContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public TerminalNode LE() { return getToken(boklParser.LE, 0); }
		public StrRValueContext strRValue() {
			return getRuleContext(StrRValueContext.class,0);
		}
		public TerminalNode Var() { return getToken(boklParser.Var, 0); }
		public StrVarAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strVarAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterStrVarAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitStrVarAssign(this);
		}
	}

	public final StrVarAssignContext strVarAssign() throws RecognitionException {
		StrVarAssignContext _localctx = new StrVarAssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_strVarAssign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); match(Var);
			setState(115);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(114); match(WS);
				}
			}

			setState(117); match(T__1);
			setState(119);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(118); match(WS);
				}
			}

			setState(121); strRValue();
			setState(123);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(122); match(WS);
				}
			}

			setState(125); match(LE);
			setState(127);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(126); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompareStrContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public StrRValueContext strRValue(int i) {
			return getRuleContext(StrRValueContext.class,i);
		}
		public List<StrRValueContext> strRValue() {
			return getRuleContexts(StrRValueContext.class);
		}
		public CompareOperationContext compareOperation() {
			return getRuleContext(CompareOperationContext.class,0);
		}
		public CompareStrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareStr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterCompareStr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitCompareStr(this);
		}
	}

	public final CompareStrContext compareStr() throws RecognitionException {
		CompareStrContext _localctx = new CompareStrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_compareStr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); strRValue();
			setState(131);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(130); match(WS);
				}
			}

			setState(133); compareOperation();
			setState(135);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(134); match(WS);
				}
			}

			setState(137); strRValue();
			setState(139);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(138); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public CompareIntContext compareInt() {
			return getRuleContext(CompareIntContext.class,0);
		}
		public TerminalNode WS() { return getToken(boklParser.WS, 0); }
		public CompareStrContext compareStr() {
			return getRuleContext(CompareStrContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); match(T__7);
			setState(144);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				{
				setState(142); compareInt();
				}
				break;

			case 2:
				{
				setState(143); compareStr();
				}
				break;
			}
			setState(146); match(T__6);
			setState(148);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(147); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitIfStatement(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150); match(T__0);
			setState(151); match(WS);
			{
			setState(152); condition();
			}
			setState(153); codeBlock();
			setState(155);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(154); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public TerminalNode Print() { return getToken(boklParser.Print, 0); }
		public TerminalNode Num() { return getToken(boklParser.Num, 0); }
		public TerminalNode LE() { return getToken(boklParser.LE, 0); }
		public TerminalNode StringValue() { return getToken(boklParser.StringValue, 0); }
		public TerminalNode Var() { return getToken(boklParser.Var, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitPrint(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_print);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157); match(Print);
			setState(159);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(158); match(WS);
				}
			}

			setState(161); match(T__7);
			setState(162);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Var) | (1L << Num) | (1L << StringValue))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(164);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(163); match(WS);
				}
			}

			setState(166); match(T__6);
			setState(168);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(167); match(WS);
				}
			}

			setState(170); match(LE);
			setState(172);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(171); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GotoOperationContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public TerminalNode LE() { return getToken(boklParser.LE, 0); }
		public TerminalNode Var() { return getToken(boklParser.Var, 0); }
		public TerminalNode Goto() { return getToken(boklParser.Goto, 0); }
		public GotoOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gotoOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterGotoOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitGotoOperation(this);
		}
	}

	public final GotoOperationContext gotoOperation() throws RecognitionException {
		GotoOperationContext _localctx = new GotoOperationContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_gotoOperation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174); match(Goto);
			setState(175); match(WS);
			setState(176); match(Var);
			setState(178);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(177); match(WS);
				}
			}

			setState(180); match(LE);
			setState(182);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(181); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncrementContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public TerminalNode LE() { return getToken(boklParser.LE, 0); }
		public TerminalNode Var() { return getToken(boklParser.Var, 0); }
		public IncrementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_increment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterIncrement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitIncrement(this);
		}
	}

	public final IncrementContext increment() throws RecognitionException {
		IncrementContext _localctx = new IncrementContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_increment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184); match(Var);
			setState(185); match(T__3);
			setState(187);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(186); match(WS);
				}
			}

			setState(189); match(LE);
			setState(191);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(190); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileLoopContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(boklParser.WS, i);
		}
		public CompareIntContext compareInt() {
			return getRuleContext(CompareIntContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(boklParser.WS); }
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public WhileLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileLoop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).enterWhileLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof boklListener) ((boklListener)listener).exitWhileLoop(this);
		}
	}

	public final WhileLoopContext whileLoop() throws RecognitionException {
		WhileLoopContext _localctx = new WhileLoopContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_whileLoop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193); match(T__4);
			setState(195);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(194); match(WS);
				}
			}

			setState(197); match(T__7);
			setState(199);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(198); match(WS);
				}
			}

			setState(201); compareInt();
			setState(203);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(202); match(WS);
				}
			}

			setState(205); match(T__6);
			setState(207);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(206); match(WS);
				}
			}

			setState(209); codeBlock();
			setState(211);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(210); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
